--- a/ng2-talk/app/assets/styles/code.less
+++ b/ng2-talk/app/assets/styles/code.less
@@ -3,6 +3,30 @@ pre[class*="language-"] {
 }
 
 code[class*="language-"] {
-  font-size: 2.2em;
+  font-size: 2em;
   font-family: 'SF Mono', 'Consolas', 'Monaco', monospace;
+}
+
+.spectacle-slide {
+  background: transparent !important;
+
+  code {
+    font-family: 'SF Mono', 'Consolas', 'Monaco', monospace;
+    font-size: 1em;
+  }
+}
+
+.spectacle-content {
+  max-width: 90% !important;
+
+  h1 {
+    width: 100%;
+    border: none !important;
+    border-bottom: 5px solid #607d8b !important;
+    text-transform: none !important;
+    font-weight: 400 !important;
+    font-size: 1.5em !important;
+    white-space: normal !important;
+    top: -80px !important;
+  }
 }
