--- a/ng2-talk/app/assets/styles/code.less
+++ b/ng2-talk/app/assets/styles/code.less
@@ -14,6 +14,12 @@ code[class*="language-"] {
     font-family: 'SF Mono', 'Consolas', 'Monaco', monospace;
     font-size: 0.95em;
   }
+
+  &.code-pane {
+    code {
+      font-size: 2em !important;
+    }
+  }
 }
 
 .spectacle-content {
@@ -31,8 +37,8 @@ code[class*="language-"] {
     font-size: 1.5em !important;
     white-space: normal !important;
     top: -60px !important;
-    -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     z-index: 1000;
   }
 }
